Added button and fixed fonts

--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
           <div class="copy-wrapper js-reveal">
             <p>Lorem ipsum dolor sit.</p>
             <p>
-              Donec id scelerisque nisl, et sollicitudin ex. Duis aliquet, orci id scelerisque maximus, massa odio malesuada dolor, sed tristique velit lectus ac massa. In consectetur malesuada risus, eu vulputate quam tristique nec. Quisque blandit condimentum risus ut molestie. Donec eros dolor, lacinia quis tortor ut, dapibus facilisis massa. Sed sed bibendum nisi. Morbi posuere augue eu ipsum aliquam rhoncus. Suspendisse sed metus tellus. Sed convallis nibh in orci efficitur, ut pharetra ex congue. Curabitur leo ante, fermentum eu felis ut, mollis aliquet lorem. Pellentesque eu lobortis libero. Quisque ut mattis metus.
+              Donec id scelerisque nisl, et sollicitudin ex. Duis aliquet, orci id scelerisque maximus, massa odio malesuada dolor, sed tristique velit lectus ac massa. In consectetur malesuada risus, eu vulputate quam tristique nec.
             </p>
+            <a href="#" class="btn page-section__btn js-reveal">
+              <span class="btn__lbl">En savoir plus</span>
+            </a>
           </div>
         </section>
 
@@ -78,8 +81,11 @@
           <div class="copy-wrapper js-reveal">
             <p>Lorem ipsum dolor sit.</p>
             <p>
-              Donec id scelerisque nisl, et sollicitudin ex. Duis aliquet, orci id scelerisque maximus, massa odio malesuada dolor, sed tristique velit lectus ac massa. In consectetur malesuada risus, eu vulputate quam tristique nec. Quisque blandit condimentum risus ut molestie. Donec eros dolor, lacinia quis tortor ut, dapibus facilisis massa. Sed sed bibendum nisi. Morbi posuere augue eu ipsum aliquam rhoncus. Suspendisse sed metus tellus. Sed convallis nibh in orci efficitur, ut pharetra ex congue. Curabitur leo ante, fermentum eu felis ut, mollis aliquet lorem. Pellentesque eu lobortis libero. Quisque ut mattis metus.
+              Donec id scelerisque nisl, et sollicitudin ex. Duis aliquet, orci id scelerisque maximus, massa odio malesuada dolor, sed tristique velit lectus ac massa. In consectetur malesuada risus, eu vulputate quam tristique nec.
             </p>
+            <a href="#" class="btn page-section__btn">
+              <span class="btn__lbl">En savoir plus</span>
+            </a>
           </div>
         </section>
 
@@ -98,8 +104,11 @@
           <div class="copy-wrapper js-reveal">
             <p>Lorem ipsum dolor sit.</p>
             <p>
-              Donec id scelerisque nisl, et sollicitudin ex. Duis aliquet, orci id scelerisque maximus, massa odio malesuada dolor, sed tristique velit lectus ac massa. In consectetur malesuada risus, eu vulputate quam tristique nec. Quisque blandit condimentum risus ut molestie. Donec eros dolor, lacinia quis tortor ut, dapibus facilisis massa. Sed sed bibendum nisi. Morbi posuere augue eu ipsum aliquam rhoncus. Suspendisse sed metus tellus. Sed convallis nibh in orci efficitur, ut pharetra ex congue. Curabitur leo ante, fermentum eu felis ut, mollis aliquet lorem. Pellentesque eu lobortis libero. Quisque ut mattis metus.
+              Donec id scelerisque nisl, et sollicitudin ex. Duis aliquet, orci id scelerisque maximus, massa odio malesuada dolor, sed tristique velit lectus ac massa. In consectetur malesuada risus, eu vulputate quam tristique nec.
             </p>
+            <a href="#" class="btn page-section__btn">
+              <span class="btn__lbl">En savoir plus</span>
+            </a>
           </div>
         </section>
 
@@ -118,8 +127,11 @@
           <div class="copy-wrapper js-reveal">
             <p>Lorem ipsum dolor sit.</p>
             <p>
-              Donec id scelerisque nisl, et sollicitudin ex. Duis aliquet, orci id scelerisque maximus, massa odio malesuada dolor, sed tristique velit lectus ac massa. In consectetur malesuada risus, eu vulputate quam tristique nec. Quisque blandit condimentum risus ut molestie. Donec eros dolor, lacinia quis tortor ut, dapibus facilisis massa. Sed sed bibendum nisi. Morbi posuere augue eu ipsum aliquam rhoncus. Suspendisse sed metus tellus. Sed convallis nibh in orci efficitur, ut pharetra ex congue. Curabitur leo ante, fermentum eu felis ut, mollis aliquet lorem. Pellentesque eu lobortis libero. Quisque ut mattis metus.
+              Donec id scelerisque nisl, et sollicitudin ex. Duis aliquet, orci id scelerisque maximus, massa odio malesuada dolor, sed tristique velit lectus ac massa. In consectetur malesuada risus, eu vulputate quam tristique nec.
             </p>
+            <a href="#" class="btn page-section__btn">
+              <span class="btn__lbl">En savoir plus</span>
+            </a>
           </div>
         </section>
       </div>
