Added date scroll

--- a/index.html
+++ b/index.html
@@ -27,6 +27,32 @@
 <body>
 
   <div class="page">
+    <div class="page-date__nav">
+      <div class="vertical-line"></div>
+      <div data-id="0" class="dot this-active">
+        <button class="page-date__btn">
+          <span class="btn__lbl">23 mars 2012</span>
+        </button>
+      </div>
+      <div class="vertical-line"></div>
+      <div data-id="1" class="dot">
+        <button class="page-date__btn">
+          <span class="btn__lbl">23 mars 2013</span>
+        </button>
+      </div>
+      <div class="vertical-line"></div>
+      <div data-id="2" class="dot">
+        <button class="page-date__btn">
+          <span class="btn__lbl">23 avril 2013</span>
+        </button>
+      </div>
+      <div class="vertical-line"></div>
+      <div data-id="3" class="dot">
+        <button class="page-date__btn">
+          <span class="btn__lbl">23 juin 2013</span>
+        </button>
+      </div>
+    </div>
     <div class="page-left-right">
       <div class="page-left d-none d-lg-block">
         <video autoplay="" loop="" muted="" playsinline="" poster="https://noccoffeeco.com/media/2019/03/about_curation.jpg" class="page-left__media this-active" data-id="0">
