--- a/home.html
+++ b/home.html
@@ -25,51 +25,182 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg">
-    <a class="navbar-brand" href="#">
-      <img src="img/cdh-logo.svg" alt="">
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
-        </li>
-      </ul>
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Boutique</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Explore</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
-        </li>
-      </ul>
+
+  <div class="page">
+    <nav class="navbar navbar-expand-lg">
+      <a class="navbar-brand" href="#">
+        <img src="img/cdh-logo.svg" alt="">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
+          </li>
+        </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Boutique</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Explore</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="page-date__nav">
+      <div class="vertical-line"></div>
+      <div data-id="0" class="dot this-active">
+        <button class="page-date__btn">
+          <span class="btn__lbl">23 mars 2012</span>
+        </button>
+      </div>
+      <div class="vertical-line"></div>
+      <div data-id="1" class="dot">
+        <button class="page-date__btn">
+          <span class="btn__lbl">23 mars 2013</span>
+        </button>
+      </div>
+      <div class="vertical-line"></div>
+      <div data-id="2" class="dot">
+        <button class="page-date__btn">
+          <span class="btn__lbl">23 avril 2013</span>
+        </button>
+      </div>
+      <div class="vertical-line"></div>
+      <div data-id="3" class="dot">
+        <button class="page-date__btn">
+          <span class="btn__lbl">23 juin 2013</span>
+        </button>
+      </div>
     </div>
-  </nav>
+    <div class="page-left-right">
+      <div class="page-left d-none d-lg-block">
+        <video autoplay="" loop="" muted="" playsinline="" poster="https://noccoffeeco.com/media/2019/03/about_curation.jpg" class="page-left__media this-active" data-id="0">
+          <source src="https://noccoffeeco.com/media/2019/02/location_1.mp4" type="video/mp4">
+        </video>
+        <video autoplay="" loop="" muted="" playsinline="" poster="https://noccoffeeco.com/media/2019/03/about_latte_new.jpg" class="page-left__media" data-id="1">
+          <source src="https://noccoffeeco.com/media/2019/03/about_latte.mp4" type="video/mp4">
+        </video>
+        <video autoplay="" loop="" muted="" playsinline="" poster="https://noccoffeeco.com/media/2019/03/about_food.jpg" class="page-left__media" data-id="2">
+          <source src="https://noccoffeeco.com/media/2019/03/noc_about_food.mp4" type="video/mp4">
+        </video>
+        <video autoplay="" loop="" muted="" playsinline="" poster="https://noccoffeeco.com/media/2019/03/about_food-1.jpg" class="page-left__media" data-id="3">
+          <source src="https://noccoffeeco.com/media/2019/02/about_space.mp4" type="video/mp4">
+        </video>
+      </div>
+      <div class="page-right js-page-right">
+        <section class="page-section js-section this-current" data-id="0" data-href="https://noccoffeeco.com/en/about-us/curation/" data-headertitle="Curation - NOC COFFEE CO.">
 
-  <div class="test">
+          <div class="section-banner d-block d-lg-none js-reveal reveal">
+            <!-- <div class="section-banner d-none js-reveal"> -->
+            <video autoplay="" loop="" muted="" playsinline="" poster="https://noccoffeeco.com/media/2019/03/about_curation.jpg" class="section-banner__media" data-id="0">
+              <source src="https://noccoffeeco.com/media/2019/02/location_1.mp4" type="video/mp4">
+            </video>
+          </div>
 
+          <h2 class="section-title js-reveal">Lorem Ipsum</h2>
+
+
+          <div class="copy-wrapper js-reveal">
+            <p>Lorem ipsum dolor sit.</p>
+            <p>
+              Donec id scelerisque nisl, et sollicitudin ex. Duis aliquet, orci id scelerisque maximus, massa odio malesuada dolor, sed tristique velit lectus ac massa. In consectetur malesuada risus, eu vulputate quam tristique nec.
+            </p>
+            <a href="#" class="btn page-section__btn js-reveal">
+              <span class="btn__lbl">En savoir plus</span>
+            </a>
+          </div>
+        </section>
+
+        <section class="page-section js-section" data-id="1" data-href="https://noccoffeeco.com/en/about-us/curation/" data-headertitle="Curation - NOC COFFEE CO.">
+
+          <div class="section-banner d-block d-lg-none js-reveal reveal">
+            <!-- <div class="section-banner d-none js-reveal"> -->
+            <video autoplay="" loop="" muted="" playsinline="" poster="https://noccoffeeco.com/media/2019/03/about_curation.jpg" class="section-banner__media" data-id="0">
+              <source src="https://noccoffeeco.com/media/2019/02/location_1.mp4" type="video/mp4">
+            </video>
+          </div>
+
+          <h2 class="section-title js-reveal">Lorem Ipsum</h2>
+
+
+          <div class="copy-wrapper js-reveal">
+            <p>Lorem ipsum dolor sit.</p>
+            <p>
+              Donec id scelerisque nisl, et sollicitudin ex. Duis aliquet, orci id scelerisque maximus, massa odio malesuada dolor, sed tristique velit lectus ac massa. In consectetur malesuada risus, eu vulputate quam tristique nec.
+            </p>
+            <a href="#" class="btn page-section__btn">
+              <span class="btn__lbl">En savoir plus</span>
+            </a>
+          </div>
+        </section>
+
+        <section class="page-section js-section" data-id="2" data-href="https://noccoffeeco.com/en/about-us/curation/" data-headertitle="Curation - NOC COFFEE CO.">
+
+          <div class="section-banner d-block d-lg-none js-reveal reveal">
+            <!-- <div class="section-banner d-none js-reveal"> -->
+            <video autoplay="" loop="" muted="" playsinline="" poster="https://noccoffeeco.com/media/2019/03/about_curation.jpg" class="section-banner__media" data-id="0">
+              <source src="https://noccoffeeco.com/media/2019/02/location_1.mp4" type="video/mp4">
+            </video>
+          </div>
+
+          <h2 class="section-title js-reveal">Lorem Ipsum</h2>
+
+
+          <div class="copy-wrapper js-reveal">
+            <p>Lorem ipsum dolor sit.</p>
+            <p>
+              Donec id scelerisque nisl, et sollicitudin ex. Duis aliquet, orci id scelerisque maximus, massa odio malesuada dolor, sed tristique velit lectus ac massa. In consectetur malesuada risus, eu vulputate quam tristique nec.
+            </p>
+            <a href="#" class="btn page-section__btn">
+              <span class="btn__lbl">En savoir plus</span>
+            </a>
+          </div>
+        </section>
+
+        <section class="page-section page-section--last js-section" data-id="3" data-href="https://noccoffeeco.com/en/about-us/curation/" data-headertitle="Curation - NOC COFFEE CO.">
+
+          <div class="section-banner d-block d-lg-none js-reveal reveal">
+            <!-- <div class="section-banner d-none js-reveal"> -->
+            <video autoplay="" loop="" muted="" playsinline="" poster="https://noccoffeeco.com/media/2019/03/about_curation.jpg" class="section-banner__media" data-id="0">
+              <source src="https://noccoffeeco.com/media/2019/02/location_1.mp4" type="video/mp4">
+            </video>
+          </div>
+
+          <h2 class="section-title js-reveal">Lorem Ipsum</h2>
+
+
+          <div class="copy-wrapper js-reveal">
+            <p>Lorem ipsum dolor sit.</p>
+            <p>
+              Donec id scelerisque nisl, et sollicitudin ex. Duis aliquet, orci id scelerisque maximus, massa odio malesuada dolor, sed tristique velit lectus ac massa. In consectetur malesuada risus, eu vulputate quam tristique nec.
+            </p>
+            <a href="#" class="btn page-section__btn">
+              <span class="btn__lbl">En savoir plus</span>
+            </a>
+          </div>
+        </section>
+      </div>
+    </div>
   </div>
 
 
   <!-- Add your site or application content here -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
-  <script>
-    AOS.init();
-  </script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
