--- a/home.html
+++ b/home.html
@@ -36,21 +36,48 @@
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
+          <li class="nav-item lang">
+            <a class="nav-link" href="#">Fr</a>
+            <ul class="dropdown">
+              <li>
+                <a class="nav-link" href="#">
+                  Français
+                </a>
+              </li>
+              <li>
+                <a class="nav-link" href="#">
+                  English
+                </a>
+              </li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">
+              <img src="img/icons/ic_search.svg" alt="">
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">
+              <img src="img/icons/ic_user.svg" alt="">
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">
+              <img src="img/icons/ic_basket.svg" alt="">
+            </a>
           </li>
         </ul>
         <ul class="navbar-nav">
-          <li class="nav-item active">
+          <li class="nav-item text active">
             <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item text">
             <a class="nav-link" href="#">Boutique</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item text">
             <a class="nav-link" href="#">Explore</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item text">
             <a class="nav-link" href="#">Contact</a>
           </li>
         </ul>
